<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:textColor="#000000"
        android:layout_margin="20dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_lisic"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/lisic_s_logo"
            app:srcCompat="@drawable/logo_lisic" />

        <ImageView
            android:id="@+id/img_ulco"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/ulco_s_logo"
            app:srcCompat="@drawable/logo_ulco" />

        <ImageView
            android:id="@+id/img_lmpa"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/lmpa_s_logo"
            app:srcCompat="@drawable/logo_lmpa" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Palindrome"
        android:textColor="#000000"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Version"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:textSize="16sp" />


</LinearLayout>
